--- a/صفحة ثانيه.html
+++ b/صفحة ثانيه.html
@@ -6,7 +6,9 @@
 <body>
     <img src="./pubg.jpg" width="100px" height="100px">
 
-    <a href="./test.html"></a> اضغط للانتقال للصغحة الاولى
+    <a href="./test.html">انتقل الى الصفحة الاولى</a>
+
+
 
     <video controls src="./ve.mp4"></video>
     <!-- 30ofjuly2022< -->
